--- a/wTheme/package.json
+++ b/wTheme/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.9.3",
-        "bootstrap": "^5.1.0"
+        "bootstrap": "^5.1.0",
+        "bootstrap-icons": "^1.5.0"
     }
 }
